Fix library path wrapping on low resolution screens

--- a/web/static/css/autosubliminal.css
+++ b/web/static/css/autosubliminal.css
@@ -613,8 +613,9 @@ table.tablesorter .filtered {
 
 /* Style a banner title in tablesorter reflow mode */
 @media (max-width: 48em) {
-    .title-banner-image {
+    .title-banner-image, .path {
         width: 50%;
+        float: right;
     }
 }
 
